chore: added annotation for minerlogin
