# docs/swagger.yaml
@@ -6,6 +6,19 @@ definitions:
       success:
         type: boolean
     type: object
+  auth.MinerLoginRequest:
+    properties:
+      email:
+        type: string
+      hotkey:
+        type: string
+      message:
+        type: string
+      organisation:
+        type: string
+      signature:
+        type: string
+    type: object
   db.TaskStatus:
     enum:
     - IN_PROGRESS
@@ -26,15 +39,6 @@ definitions:
     - TaskTypeCodeGeneration
     - TaskTypeDialogue
     - TaskTypeTextToImage
-  miner.MinerApplicationRequest:
-    properties:
-      email:
-        type: string
-      hotkey:
-        type: string
-      organisationName:
-        type: string
-    type: object
   miner.MinerInfoResponse:
     properties:
       minerId:
@@ -278,43 +282,48 @@ paths:
       summary: Get miner information
       tags:
       - Miner
-  /api/v1/miner/miner-application:
+  /api/v1/miner/login:
     post:
       consumes:
       - application/json
-      description: Submit an application for a miner API key and subscription key
-        by providing the necessary details
+      description: Log in a miner using their hotkey and message
       parameters:
-      - description: Request body containing the miner application details (organisationName
-          is optional)
+      - description: Request body containing the miner login details
         in: body
         name: body
         required: true
         schema:
-          $ref: '#/definitions/miner.MinerApplicationRequest'
+          $ref: '#/definitions/auth.MinerLoginRequest'
       produces:
       - application/json
       responses:
         "200":
-          description: Application submitted successfully
+          description: Login successful, returns API key and subscription key
           schema:
             allOf:
             - $ref: '#/definitions/api.ApiResponse'
             - properties:
                 body:
-                  type: string
+                  additionalProperties:
+                    type: string
+                  type: object
               type: object
         "400":
-          description: Invalid request body or parameters
+          description: Failed to parse message
+          schema:
+            $ref: '#/definitions/api.ApiResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/api.ApiResponse'
         "500":
-          description: Internal server error
+          description: Failed to get nonce from cache or failed to create/get miner
+            user
           schema:
             $ref: '#/definitions/api.ApiResponse'
-      summary: Apply for a miner API key and subscription key
+      summary: Miner login
       tags:
-      - Miner
+      - Authentication
   /api/v1/miner/partner/disable:
     put:
       consumes:
